@@ -3,9 +3,10 @@ use warnings;
 
 use App::MARC::List;
 use English;
+use Error::Pure::Utils qw(clean);
 use File::Object;
 use File::Spec::Functions qw(abs2rel);
-use Test::More 'tests' => 4;
+use Test::More 'tests' => 6;
 use Test::NoWarnings;
 use Test::Output;
 
@@ -69,3 +70,24 @@ stderr_like(
 	qr{^Cannot process '1' record\. Error: Field 300 must have indicators \(use ' ' for empty indicators\)},
 	'Run filter for MARC XML file with 1 record (with error).',
 );
+
+# Test.
+@ARGV = (
+	$data_dir->file('ex1.xml')->s,
+);
+eval {
+	App::MARC::List->new->run;
+};
+is($EVAL_ERROR, "Field and subfield is required.\n", "Field and subfield is required.");
+clean();
+
+# Test.
+@ARGV = (
+	$data_dir->file('ex1.xml')->s,
+	'015',
+);
+eval {
+	App::MARC::List->new->run;
+};
+is($EVAL_ERROR, "Field and subfield is required.\n", "Field and subfield is required.");
+clean();
