@@ -1,4 +1,5 @@
 0.02
+ - Add tests for missing input values (field and subfield).
  - Fix test dependencies.
  - Remove unused module.
 
